# NOPT021-algorithmic-game-theory

./: README.md  pyproject.toml
notebooks/: homework_01.ipynb
