[tool.poetry]
name = "nopt021-algorithmic-game-theory"
version = "0.1.0"
description = ""
authors = ["David Kubek <david.kubek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint-protobuf = "^0.20.2"
isort = "^5.10.1"
yapf = "^0.32.0"
jupyterlab = "^3.4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
